# weather-web

./: Cargo.toml  README.md  package-lock.json  package.json  tailwind.config.js
assets/: main.css
src/: api.rs  error.rs  main.rs
src/web/: mod.rs  weather_routes.rs
templates/: base.html  index.html  weather.html
tests/: quick_test.rs
