[package]
name = "weather-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.6", features = ["macros"] }
reqwest = { version = "0.11", features = ["json"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
	"macros",
	"any",
	"postgres",
]}
dotenv = "0.15"
askama = { version = "0.12", feature = ["with-axum"] }
askama_axum = "0.3"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
